--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.9",
-    "@mui/material": "^5.15.9",
+    "@mui/material": "^5.15.10",
     "@mui/styled-engine-sc": "^6.0.0-alpha.16",
+    "@mui/x-date-pickers": "^6.19.4",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "firebase": "^10.8.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
